--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,7 +53,7 @@
             "vite": "6.3.5"
       },
       "scripts": {
-      "dev": "npm exec vite",
-      "build": "npm exec vite build"
-      } 
+  "dev": "node ./node_modules/vite/bin/vite.js",
+  "build": "node ./node_modules/vite/bin/vite.js build"
+}
 }
